--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
 
+spring.h2.console.path=/h2-console
 spring.profiles.active=test
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+logging.level.org.springframework.security=DEBUG
